--- a/styles.css
+++ b/styles.css
@@ -98,19 +98,18 @@ h3 {
 }
 
 .nav-container a {
-  text-decoration: none; /* Keine Unterstreichung */
-  color: inherit; /* Erbt die Textfarbe, die auf der Seite definiert ist */
-  outline: none; /* Entfernt den Standardrahmen beim Fokussieren */
+  text-decoration: none; 
+  color: inherit;
+  outline: none; 
 }
 
-/* Entfernen der blauen Hervorhebung beim Fokussieren und Klicken */
 .nav-container a:focus, 
 .nav-container a:active, 
 .nav-container a:hover, 
 .nav-container a:visited {
-  outline: none; /* Entfernt die blaue Umrandung */
-  background: none; /* Entfernt den Hintergrund */
-  text-decoration: none; /* Entfernt Unterstreichung */
+  outline: none; 
+  background: none;
+  text-decoration: none; 
 }
 
 /* Word container and letters */
@@ -189,10 +188,10 @@ h3 {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 10%; /* Die unteren 20% */
+    height: 10%; 
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
     pointer-events: none;
-    z-index: 2; /* Sicherstellen, dass es über dem Bild liegt */
+    z-index: 2;
 }
 
 .image-container img {
@@ -202,13 +201,13 @@ h3 {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    z-index: 1; /* Bild unter der Transparenz */
+    z-index: 1; 
 }
 
   .image-container img {
     position: absolute; 
     zoom: 20%;
-    top: -100px; /* Bild 100px nach oben */
+    top: -100px; /* 100px nach oben */
     left: 0px; 
     width: auto; 
     height: 120%; 
@@ -222,13 +221,12 @@ h3 {
 }
 
 .image-container .main-picture {
-    width: 100%; /* Vollständig über die Breite */
-    height: 100%; /* Vollständig über die Höhe */
-    object-fit: cover; /* Verhindert Verzerrung des Bildes */
-    object-position: center; /* Bildmittelausrichtung */
-    transform: scale(2); /* Zoom-Level hier anpassen, z.B. 2x */
-    /* Optional: spezifische Bildposition durch Translation */
-    transform-origin: center; /* Ursprung des Zooms */
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+    object-position: center; 
+    transform: scale(2); 
+    transform-origin: center; 
 }
 
 
@@ -246,8 +244,8 @@ h3 {
 .circle {
   position: absolute;
   border-radius: 50%;
-  background: radial-gradient(circle, rgba(9, 117, 127, 0.7) 70%, rgba(69, 109, 113, 0.8) 100%); /* Gedeckte Farben */
-  box-shadow: 0 0 20px rgba(46, 96, 92, 0.6), 0 0 40px rgba(0, 138, 153, 0.4); /* Leichte Leuchtwirkung */
+  background: radial-gradient(circle, rgba(9, 117, 127, 0.7) 70%, rgba(69, 109, 113, 0.8) 100%); 
+  box-shadow: 0 0 20px rgba(46, 96, 92, 0.6), 0 0 40px rgba(0, 138, 153, 0.4); 
   animation: float 10s infinite;
   z-index:1;
 }
@@ -361,7 +359,7 @@ background-color: rgb(80, 210, 197);
   margin-left: auto; 
   height: auto;
   border-radius: 8px;
-  margin-left: auto; /* Move image to the right */
+  margin-left: auto; 
   position: absolute; /* Position the image absolutely */
   bottom: -590px; /* Adjust the overlap amount */
   right: 40px;/* Move image to the right */
@@ -404,26 +402,26 @@ background-color: rgb(80, 210, 197);
  /* Für die Galerie */
 .gallery {
   display: flex;
-  flex-wrap: wrap; /* Ermöglicht das Umfließen der Bilder */
+  flex-wrap: wrap; 
   justify-content: space-between;
-  gap: 20px; /* Abstand zwischen den Bildern */
+  gap: 20px; 
   padding: 20px 0;
 }
 
 .gallery-item {
-  flex: 1 1 40%; /* Jedes Element nimmt nun 40% des verfügbaren Platzes ein */
+  flex: 1 1 40%; 
   background-color: #d9d9d900;
   border-radius: 8px;
   overflow: hidden;
   text-align: center;
-  margin-bottom: 20px; /* Abstand nach unten */
+  margin-bottom: 20px; 
 }
 
 .gallery-item img {
-  max-width: 60%;  /* Bilder nehmen maximal 80% der Breite des Containers ein */
-  height: auto;    /* Höhe wird automatisch angepasst */
+  max-width: 60%;  
+  height: auto;    
   display: block;
-  margin: 0 auto;  /* Zentriert das Bild im Container */
+  margin: 0 auto;  
 }
 
 .gallery-item:hover img {
@@ -444,7 +442,7 @@ background-color: rgb(80, 210, 197);
   }
 
   .gallery-item {
-    flex: 1 1 100%; /* Jedes Element nimmt nun den gesamten Platz ein */
+    flex: 1 1 100%; 
     margin-bottom: 20px;
   }
 }
@@ -456,7 +454,7 @@ background-color: rgb(80, 210, 197);
 .gallery-container {
   display: flex;
   align-items: center;
-  position: relative; /* Wichtig für das Positionieren der Blasen */
+  position: relative; 
 }
 
 /* Projekttitel */
@@ -510,13 +508,11 @@ background-color: rgb(80, 210, 197);
   top: 30px;
 }
 
-
-/* Die oberste Bubble, die das Projektbild enthält */
 .image-bubble {
   width: 80px;
   height: 80px;
   position: relative;
-  filter: blur(4px); /* Optional: Blurr-Effekt für die Bubble */
+  filter: blur(4px); 
   box-shadow: 0 0 15px rgba(0, 138, 153, 0.6);
   transform: scale(1.1);
 }
@@ -524,9 +520,9 @@ background-color: rgb(80, 210, 197);
 .bubble-image {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Bild wird skaliert, um den Container auszufüllen */
+  object-fit: cover; 
   border-radius: 50%;
-  filter: blur(1px); /* Optional: Bild leicht unscharf machen */
+  filter: blur(1px); 
 }
 
 /* Bewegung der Blasen */
@@ -563,7 +559,7 @@ background-color: rgb(80, 210, 197);
   align-items: center;
   justify-content: center;
   transition: opacity 0.3s ease;
-  z-index: 1; /* Sicherstellen, dass dieser Container an oberster Stelle bleibt */
+  z-index: 1; 
 }
 
 /* Projekttitel */
@@ -571,7 +567,7 @@ background-color: rgb(80, 210, 197);
   font-size: 2rem;
   cursor: pointer;
   transition: transform 0.3s ease;
-  z-index: 2; /* Der Titel bleibt oben */
+  z-index: 2; 
 }
 
 /* Container für die Bilder */
@@ -579,11 +575,11 @@ background-color: rgb(80, 210, 197);
   display: flex;
   justify-content: space-between;
   position: absolute;
-  left: -200px; /* Anfangs außerhalb des Containers */
-  right: -200px; /* Anfangs außerhalb des Containers */
-  opacity: 0; /* Bilder sind standardmäßig unsichtbar */
-  transition: opacity 0.3s ease, left 0.3s ease, right 0.3s ease; /* Übergänge für Opazität und Position */
-  z-index: 0; /* Die Bilder müssen hinter dem Titel bleiben */
+  left: -200px; 
+  right: -200px; 
+  opacity: 0; 
+  transition: opacity 0.3s ease, left 0.3s ease, right 0.3s ease; 
+  z-index: 0; 
 }
 
 /* Projektbilder */
@@ -591,22 +587,21 @@ background-color: rgb(80, 210, 197);
   width: 100px;
   height: auto;
   transition: transform 0.3s ease;
-  opacity: 0; /* Bilder sind standardmäßig unsichtbar */
-  z-index: 0; /* Bilder hinter dem Titel */
+  opacity: 0;
+  z-index: 0; 
 }
 
 .project-item:hover .project-images {
-  left: 0; /* Bilder erscheinen auf der linken und rechten Seite */
+  left: 0; 
   right: 0;
-  opacity: 1; /* Bilder werden sichtbar */
+  opacity: 1;
 }
 
 .project-item:hover .project-image {
-  opacity: 1; /* Bilder werden sichtbar */
-  transform: translateY(-10px); /* Leichtes Anheben der Bilder */
+  opacity: 1; 
+  transform: translateY(-10px); 
 }
 
-/* Wenn der Projekttitel nicht aktiv ist, wird er etwas ausgeblendet */
 .project-item:not(:hover) .project-title {
   opacity: 0.3;
 }
